--- a/CubosChallenge/appsettings.json
+++ b/CubosChallenge/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "WebApiDatabase": "Host=localhost; Port=3030; Database=postgres; Username=postgres; password=Cubos#challenge"
+  "WebApiDatabase": "Host=localhost; Port=5432; Database=postgres; Username=postgres; password=@Bankai13"
   }
 }
 
