inclusão de funcionalidade de paginação

--- a/CubosChallenge/CubosChallenge.csproj
+++ b/CubosChallenge/CubosChallenge.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 </Project>
