--- a/CubosChallenge/appsettings.json
+++ b/CubosChallenge/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "WebApiDatabase": "Host=localhost; Port=5432; Database=postgres; Username=postgres; password=@Bankai13"
+    "WebApiDatabase": "Host=cubos_challenge_db; Port=5432; Database=postgres; Username=postgres; password=postgres"
   }
 }
-
