--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,32 @@
-version: '3.4'
+version: "3.4"
+
+networks:
+  dev:
+    driver: bridge
 
 services:
   cuboschallenge:
     image: ${DOCKER_REGISTRY-}cuboschallenge
+    depends_on:
+      - "cubos_db"
+    container_name: "cubos_challenge_api"
+    ports:
+      - "8081:80"
     build:
       context: .
       dockerfile: CubosChallenge/Dockerfile
+    networks:
+      - dev
+
+  cubos_db:
+    image: postgres:latest
+    container_name: cubos_challenge_db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - "5432:5432"
+    restart: always
+    networks:
+      - dev
